--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
-<app-header></app-header>
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
-    </div>
-  </div>
-</div>
+<h3>I'm in the AppComponent!</h3>
+<hr>
+<app-servers></app-servers>
+<app-warning-alert></app-warning-alert>
+<app-success-alert></app-success-alert>
